--- a/hex.html
+++ b/hex.html
@@ -8,6 +8,10 @@
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+  <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="https://fonts.sandbox.google.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <title>Color Flipper</title>
   <link rel="stylesheet" href="style.css" />
 
@@ -21,11 +25,16 @@
         <a class="navbar-brand" href="index.html">simple</a>
       </li>
       <li>
-        <a class="navbar-brand" href="hex.html">hex</a>
+        <a class="navbar-brand" href="hex.html">hex
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15                 8z"/>
+          </svg>
+        </a>
       </li>
     </ul>
   </div>
 </nav>
+
 <div class="container">
   <div class="row">
 
@@ -36,15 +45,16 @@
         <div id="bgColor" class="p-3 mb-2 bg-dark text-white">
           <h2>Background color:<br>
             <p id="clr">
-								<span class="color">
-									#f1f5f8
+              <span class="color">
+                  #f1f5f8
+              </span>
             </p>
-            </span>
+
           </h2>
           <button onclick="add_Color()" class="btn btn-secondary"  data-toggle="tooltip" data-placement="bottom" title="Add color" id="add">+</button>
         </div>
 
-        <button class="btn btn-secondary" id="btn">Click me</button>
+        <button class="btn btn-secondary" id="btn">Flip</button>
       </main>
     </div>
 
