--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
         <h4 id="h">Simple color flipper</h4>
         <ul id="smpl" class="navbar-nav">
             <li class="nav-item">
-                <a class="navbar-brand" href="index.html">simple</a>
+                <a class="navbar-brand" href="index.html">simple
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5                          0 0 0 15 8z"/>
+                    </svg>
+                </a>
             </li>
             <li>
                 <a class="navbar-brand" href="hex.html">hex</a>
@@ -44,7 +48,7 @@
                     </h2>
                 </div>
 
-                <button class="btn btn-secondary" id="btn">Click me</button>
+                <button class="btn btn-secondary" id="btn">Flip</button>
             </main>
         </div>
 
